# MyLib

./: .gitignore  CMakeLists.txt  README.md  mylib.hpp
srcs/: mylib.cpp
